fix job dependency

--- a/.github/workflows/extended-tests.yaml
+++ b/.github/workflows/extended-tests.yaml
@@ -89,7 +89,7 @@ jobs:
 
   promote-prod:
     name: promote-prod
-    needs: [build, setup]
+    needs: [extended-tests, setup]
     secrets:
       env_vars: ${{ secrets.env_vars }}
     uses: coreeng/p2p/.github/workflows/promote-image.yaml@promote
