--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -47,6 +47,7 @@ on:
         default: ''
 env:
   REGISTRY: ${{ inputs.region }}-docker.pkg.dev/${{ inputs.project-id }}/tenant
+  ENVIRONMENT: ${{ inputs.env-name }}
 
 jobs:
   p2p:
