--- a/.github/workflows/platform-ci.yaml
+++ b/.github/workflows/platform-ci.yaml
@@ -91,7 +91,7 @@ jobs:
     name: tenants-yaml
     uses: coreeng/p2p/.github/workflows/platform-execute-command.yaml@main
     needs: [tenants-validate, changes]
-    if: ${{ inputs.release_build == true && needs.changes.outputs.environments == 'false' && needs.changes.outputs.tenants == 'true' }}
+    if: ${{ needs.changes.outputs.environments == 'false' && needs.changes.outputs.tenants == 'true' }}
     secrets:
       cecg-registry-username: ${{ secrets.cecg-registry-username }}
       cecg-registry-secret: ${{ secrets.cecg-registry-secret }}
