--- a/.github/workflows/platform-cd.yaml
+++ b/.github/workflows/platform-cd.yaml
@@ -93,14 +93,10 @@ jobs:
     name: tenants-yaml
     uses: coreeng/p2p/.github/workflows/platform-execute-command.yaml@main
     needs: [tenants, changes]
-    if: ${{ nputs.release_build == true && needs.changes.outputs.environments != 'true' && needs.changes.outputs.tenants == 'true' }}
+    if: ${{ needs.changes.outputs.environments != 'true' && needs.changes.outputs.tenants == 'true' }}
     secrets:
       cecg-registry-username: ${{ secrets.cecg-registry-username }}
       cecg-registry-secret: ${{ secrets.cecg-registry-secret }}
-    strategy:
-      fail-fast: true
-      max-parallel: 1
-      matrix: ${{ fromJson(needs.matrix.outputs.matrix) }}
     with:
       action: features-apply
       feature: tenants-yaml
