really fix version

--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -6,7 +6,7 @@ on:
     outputs:
       version:
         description: "The next semantic version"
-        value: ${{ jobs.increment-version.outputs.patch }}
+        value: ${{ jobs.increment-version.outputs.version }}
     secrets:
       git-token:
         required: true
@@ -21,7 +21,7 @@ jobs:
     name: increment-version
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.setversion.outputs.version }}
+      version: ${{ steps.setversion.outputs.patch }}
       
     steps:
     - uses: actions/checkout@v3
