--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -4,21 +4,11 @@ on:
   push:
     branches:
       - main
+      - p2p-testing
 
 concurrency: cd-main
 
 jobs:
-  p2p:
-    uses: ./.github/workflows/p2p.yaml
-    with:
-      env-name: test-env
-      project-id: PROJECT-ID
-      project-number: PROJECT-NUMBER
-      tenant-name: TEST-TENANT
-      dry-run: true
-      pre-targets: test-pre-step
-      post-targets: test-post-step
-
   increment-version:
     uses: ./.github/workflows/increment-version.yaml
     secrets:
