Create all the tags

--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -70,11 +70,11 @@ jobs:
         echo "minor=${{ steps.setversion.outputs.minor }}"
         echo "major=${{ steps.setversion.outputs.major }}"
 
-    - name: Create minor tag
+    - name: Create major tag
       uses: rickstaa/action-create-tag@v1
       if: inputs.dry-run == false
       with:
-        tag: v${{ steps.setversion.outputs.minor }}
+        tag: v${{ steps.setversion.outputs.major }}
         tag_exists_error: false
 
     - name: Create minor tag
