--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -92,14 +92,6 @@ jobs:
         # https://cloud.google.com/iap/docs/using-tcp-forwarding#increasing_the_tcp_upload_bandwidth
         run: $(gcloud info --format="value(basic.python_location)") -m pip install numpy
 
-      - name: Setup IAP tunnel
-        id: setup-iap-tunnel
-        if: inputs.dry-run == false
-        shell: bash
-        run: |
-          nohup sh -c "while true ; do gcloud compute start-iap-tunnel ${{ env.DPLATFORM }}-bastion 3128 --local-host-port localhost:57755 --project ${{ env.PROJECT_ID }}  --zone ${{ inputs.zone }}  ; done" &
-          sleep 4
-
       - name: Setup kubeconfig
         id: setup-kubeconfig
         if: inputs.dry-run == false
@@ -107,12 +99,6 @@ jobs:
         run: |
           gcloud container clusters get-credentials --project $PROJECT_ID --zone $REGION --internal-ip ${{ env.DPLATFORM }}
           kubectl config set clusters.gke_${{ env.PROJECT_ID }}_${{ inputs.region }}_${{ env.DPLATFORM }}.proxy-url http://localhost:57755
-
-      - name: Test kubectl
-        id: test-kubectl
-        if: inputs.dry-run == false
-        shell: bash
-        run: kubectl cluster-info
 
       - name: Login to Artifact Registry
         uses: docker/login-action@v2
@@ -130,6 +116,9 @@ jobs:
       - name: Run Command
         id: run-command
         run: |
+          nohup sh -c "while true ; do gcloud compute start-iap-tunnel ${{ env.DPLATFORM }}-bastion 3128 --local-host-port localhost:57755 --project ${{ env.PROJECT_ID }}  --zone ${{ inputs.zone }}  ; done" &
+          sleep 4
+          kubectl cluster-info
           make ${{ inputs.command }}
 
       - name: Post-targets
