--- a/.github/workflows/platform-ci.yaml
+++ b/.github/workflows/platform-ci.yaml
@@ -45,7 +45,7 @@ jobs:
             environments:
               - 'environments/**'
 
-  tenants:
+  tenants-validate:
     name: tenants
     uses: coreeng/p2p/.github/workflows/platform-execute-command.yaml@main
     needs: [changes]
@@ -64,7 +64,6 @@ jobs:
     name: Matrix
     needs: [changes]
     uses: ./.github/workflows/platform-environment-feature-matrix.yaml
-    if: ${{ inputs.release_build == true || needs.changes.outputs.environments == 'true' }}
     with:
       environment: ${{ inputs.environment }}
 
@@ -86,3 +85,20 @@ jobs:
       environment: ${{ inputs.environment }}
       platform: ${{ inputs.platform }}
       release: ${{ inputs.release }}
+
+  tenants-plan:
+    name: tenants-yaml
+    uses: coreeng/p2p/.github/workflows/platform-execute-command.yaml@main
+    needs: [tenants-validate, changes]
+    if: ${{  inputs.release_build == false && needs.changes.outputs.environments != 'true' && needs.changes.outputs.tenants == 'true' }}
+    secrets:
+      cecg-registry-username: ${{ secrets.cecg-registry-username }}
+      cecg-registry-secret: ${{ secrets.cecg-registry-secret }}
+    with:
+      action: features-plan
+      feature: tenants-yaml
+      environment: ${{ inputs.environment }}
+      platform: ${{ inputs.platform }}
+      release: ${{ inputs.release }}
+      
+
