--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -65,7 +65,7 @@ jobs:
           EOT
 
   promote-image:
-    name: promote-${{ inputs.promotion-stage }}
+    name: promote-to-${{ inputs.promotion-stage }}
     runs-on: ubuntu-latest
     needs: [lookup]
     environment: ${{ inputs.dest_github_env }}
