--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -130,5 +130,5 @@ jobs:
           DEST_AUTH_OVERRIDE: ${{ steps.auth-dest.outputs.credentials_file_path }}
           DEST_ACCESS_TOKEN: ${{ steps.auth-dest.outputs.access_token }}
         run: |
-            make p2p-promote-${{ inputs.promotion-stage }}
+            make p2p-promote-to-${{ inputs.promotion-stage }}
 
