--- a/.github/workflows/p2p-workflow-version.yaml
+++ b/.github/workflows/p2p-workflow-version.yaml
@@ -36,6 +36,7 @@ jobs:
         id: version
         shell: bash
         run: |
+          set -x
           git fetch --prune --unshallow --tags
           DESCRIBE="$(git describe --match 'prefix_*' --abbrev=7)"
           CLEANED_DESCRIBE="$(echo $DESCRIBE | tr '-' '.')"
