--- a/.github/workflows/p2p-workflow-prod.yaml
+++ b/.github/workflows/p2p-workflow-prod.yaml
@@ -13,14 +13,11 @@ on:
         required: false
         type: boolean
         default: false
-      image_tag:
+      version:
         required: false
         type: string
         default: ''
-      semver:
-        required: false
-        type: string
-        default: ''
+
 
 jobs:
   prod-deploy:
@@ -34,7 +31,6 @@ jobs:
     with:
       command: p2p-prod
       github_env: ${{ matrix.deploy_env }}
-      image_tag: ${{ inputs.image_tag }}
-      semver: ${{ inputs.semver }}
+      version: ${{ inputs.version }}
 
 
