Make it less configurable

--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -5,14 +5,6 @@ on:
       env_vars:
         required: false
     inputs:
-      source:
-        required: false
-        type: string
-        default: ${{ vars.FAST_FEEDBACK}}
-      destination:
-        required: false
-        type: string
-        default: ${{ vars.EXTENDED_TEST }}
       dry-run:
         required: false
         type: boolean
@@ -42,7 +34,7 @@ jobs:
     secrets:
       env_vars: ${{ secrets.env_vars }}
     strategy:
-      matrix: ${{ fromJSON(inputs.source) }}
+      matrix: ${{ fromJSON(vars.FAST_FEEDBACK) }}
       fail-fast: false
     with:
       command: p2p-build
@@ -55,7 +47,7 @@ jobs:
     secrets:
       env_vars: ${{ secrets.env_vars }}
     strategy:
-      matrix: ${{ fromJSON(inputs.source) }}
+      matrix: ${{ fromJSON(vars.FAST_FEEDBACK) }}
       fail-fast: false
     with:
       command: p2p-functional
@@ -69,7 +61,7 @@ jobs:
     secrets:
       env_vars: ${{ secrets.env_vars }}
     strategy:
-      matrix: ${{ fromJSON(inputs.source) }}
+      matrix: ${{ fromJSON(vars.FAST_FEEDBACK) }}
       fail-fast: false
     with:
       command: p2p-nft
@@ -84,7 +76,7 @@ jobs:
       env_vars: ${{ secrets.env_vars }}
     uses: ./.github/workflows/p2p-promote-image.yaml
     strategy:
-      matrix: ${{ fromJSON(inputs.destination) }}
+      matrix: ${{ fromJSON(vars.EXTENDED_TEST) }}
       fail-fast: false
     with:
       source_matrix: ${{ inputs.source }}
