--- a/.github/workflows/p2p-workflow-prod.yaml
+++ b/.github/workflows/p2p-workflow-prod.yaml
@@ -32,5 +32,6 @@ jobs:
       command: p2p-prod
       github_env: ${{ matrix.deploy_env }}
       version: ${{ inputs.version }}
+      dry-run: ${{ inputs.dry-run }}
 
 
