add new make tasks

--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -39,8 +39,8 @@ jobs:
     with:
       command: p2p-build
       github_env: ${{ matrix.deploy_env }}
-      version: $${{ inputs.version }}
-      dry-run: $${{ inputs.dry-run }}
+      version: ${{ inputs.version }}
+      dry-run: ${{ inputs.dry-run }}
 
   functional-test:
     needs: [build]
@@ -54,7 +54,7 @@ jobs:
       command: p2p-functional
       github_env: ${{ matrix.deploy_env }}
       version: ${{ inputs.version }}
-      dry-run: $${{ inputs.dry-run }}
+      dry-run: ${{ inputs.dry-run }}
 
 
   nft-test:
@@ -85,6 +85,6 @@ jobs:
       dest_github_env: ${{ matrix.deploy_env }}
       promotion-stage: extended-tests
       version: ${{ inputs.version }}
-      dry-run: $${{ inputs.dry-run }}
+      dry-run: ${{ inputs.dry-run }}
 
 
