--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -69,6 +69,7 @@ jobs:
       command: p2p-nft
       github_env: ${{ matrix.deploy_env }}
       version: ${{ inputs.version }}
+      dry-run: ${{ inputs.dry-run }}
 
   promote:
     name: promote
