Switch to extended-test, not extended-tests

--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -84,7 +84,7 @@ jobs:
     with:
       source_matrix: ${{ vars.FAST_FEEDBACK }}
       dest_github_env: ${{ matrix.deploy_env }}
-      promotion-stage: extended-tests
+      promotion-stage: extended-test
       version: ${{ inputs.version }}
       dry-run: ${{ inputs.dry-run }}
 
