Make version mandatory

--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -20,9 +20,8 @@ on:
         type: string
         default: europe-west2
       version:
-        required: false
+        required: true
         type: string
-        default: ''
       zone:
         required: false
         type: string
