--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -58,7 +58,7 @@ jobs:
 
     - name: Create tag
       uses: rickstaa/action-create-tag@v1
-      if: success() && github.ref == inputs.main-branch
+      if: success() && (github.ref == inputs.main-branch && inputs.dry-run == false)
       id: create_tag
       with:
         tag: v${{ steps.semvers.outputs.minor }}
